feat(update tag): add update tag route and handler (#37)
