# handlers/tag_handlers.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"errors"
 	"net/http"
 
 	apperrors "blockstracker_backend/internal/errors"
@@ -10,7 +11,9 @@ import (
 	"blockstracker_backend/models"
 
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
 	"go.uber.org/zap"
+	"gorm.io/gorm"
 )
 
 type TagHandler struct {
@@ -34,8 +37,8 @@ func NewTagHandler(
 // @Tags tags
 // @Accept json
 // @Produce json
-// @Param tag body models.CreateTagRequest true "Tag details"
-// @Success 200 {object} models.CreateTagResponseForSwagger
+// @Param tag body models.TagRequest true "Tag details"
+// @Success 200 {object} models.TagResponseForSwagger
 // @Failure 400 {object} models.GenericErrorResponse
 // @Failure 500 {object} models.GenericErrorResponse
 // @Router /tags [post]
@@ -47,7 +50,7 @@ func (h *TagHandler) CreateTag(c *gin.Context) {
 		return
 	}
 
-	var req models.CreateTagRequest
+	var req models.TagRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
 		invalidReqErr := apperrors.NewInvalidReqErr(err.Error())
 		utils.SendErrorResponse(c, h.logger, messages.ErrTagCreationFailed,
@@ -72,7 +75,63 @@ func (h *TagHandler) CreateTag(c *gin.Context) {
 		messages.Success, messages.MsgTagCreationSuccess, tag))
 }
 
+// UpdateTag godoc
+// @Summary Update an existing tag
+// @Description Update an existing tag with the given details
+// @Tags tags
+// @Accept json
+// @Produce json
+// @Param id path string true "Tag ID"
+// @Param tag body models.TagRequest true "Tag details"
+// @Success 200 {object} models.TagResponseForSwagger
+// @Failure 400 {object} models.GenericErrorResponse
+// @Failure 500 {object} models.GenericErrorResponse
+// @Router /tags/{id} [put]
 func (h *TagHandler) UpdateTag(c *gin.Context) {
+	uid, err := utils.ExtractUIDFromGinContext(c)
+	if err != nil {
+		utils.SendErrorResponse(c, h.logger, messages.ErrTagUpdateFailed,
+			err.LogError(), apperrors.ErrInternalServerError)
+		return
+	}
+
+	tagIDStr := c.Param("id")
+	tagID, parseErr := uuid.Parse(tagIDStr)
+	if parseErr != nil {
+		utils.SendErrorResponse(c, h.logger, messages.ErrTagUpdateFailed,
+			"Invalid tag ID", apperrors.NewInvalidReqErr("Invalid tag ID"))
+		return
+	}
+
+	var req models.TagRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		invalidReqErr := apperrors.NewInvalidReqErr(err.Error())
+		utils.SendErrorResponse(c, h.logger, messages.ErrTagUpdateFailed, err.Error(), invalidReqErr)
+		return
+	}
+
+	tag := models.Tag{
+		ID:         tagID,
+		Name:       req.Name,
+		CreatedAt:  req.CreatedAt,
+		ModifiedAt: req.ModifiedAt,
+		UserID:     uid,
+	}
+
+	if err := h.tagRepo.UpdateTag(&tag); err != nil {
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			utils.SendErrorResponse(c, h.logger, messages.ErrTagUpdateFailed,
+				"Tag not found or does not belong to user", apperrors.ErrUnauthorized)
+			return
+		}
+
+		utils.SendErrorResponse(c, h.logger, messages.ErrTagUpdateFailed,
+			err.Error(), apperrors.ErrInternalServerError)
+		return
+	}
+
+	c.JSON(http.StatusOK, utils.CreateJSONResponse(
+		messages.Success, messages.MsgTagUpdateSuccess, tag))
 }
 
 func (h *TagHandler) GetTagsFromVersion(c *gin.Context) {
